src/snapshots/pbsql__object_name_replacer__tests__create_index__compound_table_name.snap
---
source: src/object_name_replacer.rs
expression: translate_result
---
Err: "Expected 1 identifiers for the index table name, got: [\"x\", \"y\"]"
