src/snapshots/pbsql__object_name_replacer__tests__create_index__no_name.snap
---
source: src/object_name_replacer.rs
expression: translate_result
---
Err: Index name is required
