src/snapshots/pbsql__object_name_replacer__tests__create_index__not_replaced.snap
---
source: src/object_name_replacer.rs
expression: translate_result
---
Err: "Unexpected index name: scoreIndex"
