src/snapshots/pbsql__object_name_replacer__tests__create_index__replaced_no_schema.snap
---
source: src/object_name_replacer.rs
expression: translate_result
---
Ok:
  original_query:
    - "CREATE INDEX \"scoreIndex\" ON \"~/books/eloScores\" (score)"
  names_to_replace:
    indices_to_replace:
      scoreIndex: eloScoresIndex
    relations_to_replace:
      ? - ~/books/eloScores
      : - scores_tbl
  output_query:
    - CREATE INDEX eloScoresIndex ON scores_tbl(score)
  output_ast:
    - CreateIndex:
        name:
          - value: eloScoresIndex
            quote_style: ~
        table_name:
          - value: scores_tbl
            quote_style: ~
        using: ~
        columns:
          - expr:
              Identifier:
                value: score
                quote_style: ~
            asc: ~
            nulls_first: ~
        unique: false
        concurrently: false
        if_not_exists: false
        include: []
        nulls_distinct: ~
        predicate: ~
